--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h1>Bienvenue 👋</h1>
 
-        <a class="button" href="https://example.com" target="_blank">
+        <a class="button" href="https://www.amazon.fr/forme-%C2%ABmajeur%C2%BB-squelettique-pierre-r%C3%A9sistant/dp/B00XSJBICE" target="_blank">
             ⭐ Noter le restaurant
         </a>
 
