--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         </a>
 
         <a class="button" href="menu-en.html">
-            🇬🇧 Menu en anglais
+           Menu en anglais
         </a>
 
         <a class="button" href="menu-es.html">
-            🇪🇸 Menú en español
+           Menú en español
         </a>
     </div>
 </body>
