--- a/menu-es.html
+++ b/menu-es.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Bienvenue au restaurant</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 12px;
-            text-align: center;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
-
-        h1 {
-            margin-bottom: 20px;
-        }
-
-        a.button {
-            display: block;
-            text-decoration: none;
-            background-color: #2c7be5;
-            color: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 8px;
-            font-size: 16px;
-        }
-
-        a.button:hover {
-            background-color: #1a5dcc;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <h1>Bienvenue 👋</h1>
-
-        <a class="button" href="https://www.amazon.fr/forme-%C2%ABmajeur%C2%BB-squelettique-pierre-r%C3%A9sistant/dp/B00XSJBICE" target="_blank">
-            ⭐ Noter le restaurant
-        </a>
-
-        <a class="button" href="menu-en.html">
-            🇬🇧 Menu en anglais
-        </a>
-
-        <a class="button" href="menu-es.html">
-            🇪🇸 Menú en español
-        </a>
-    </div>
-</body>
-</html>
+fgsjhfgjhgkjhjkjkjkjkkjkjkjkjkjkjkjkj
