--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
 
-        h1 {
-            margin-bottom: 20px;
-        }
-
         a.button {
             display: block;
             text-decoration: none;
@@ -51,16 +47,25 @@
     <div class="container">
         <h1>Bienvenue 👋</h1>
 
-        <a class="button" href="https://www.amazon.fr/forme-%C2%ABmajeur%C2%BB-squelettique-pierre-r%C3%A9sistant/dp/B00XSJBICE" target="_blank">
+        <!-- Noter le restaurant -->
+        <a class="button"
+           href="https://avenirsarlat.fr/le-bistrot/"
+           target="_blank">
             ⭐ Noter le restaurant
         </a>
 
-        <a class="button" href="menu-en.html">
-           Menu en anglais
+        <!-- Menu anglais -->
+        <a class="button"
+           href="menu-en.html"
+           target="_blank">
+            🇬🇧 Menu en anglais
         </a>
 
-        <a class="button" href="menu-es.html">
-           Menú en español
+        <!-- Menu espagnol -->
+        <a class="button"
+           href="menu-es.html"
+           target="_blank">
+            🇪🇸 Menú en español
         </a>
     </div>
 </body>
