--- a/index.html
+++ b/index.html
@@ -1,72 +1,153 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Bienvenue au restaurant</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Restaurant</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+<style>
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+    background: #ececec;
+    overflow: hidden;
+}
 
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 12px;
-            text-align: center;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-        }
+/* Conteneur du slider */
+.slider {
+    display: flex;
+    width: 300%;
+    height: 100%;
+    transition: transform 0.5s ease-in-out;
+}
 
-        a.button {
-            display: block;
-            text-decoration: none;
-            background-color: #2c7be5;
-            color: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 8px;
-            font-size: 16px;
-        }
+/* Chaque écran */
+.slide {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-        a.button:hover {
-            background-color: #1a5dcc;
-        }
-    </style>
+/* Carte centrale */
+.card {
+    background: white;
+    width: 85%;
+    height: 80%;
+    border-radius: 20px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+}
+
+/* Bouton principal */
+.card a {
+    text-decoration: none;
+    background: #2c7be5;
+    color: white;
+    padding: 20px 30px;
+    border-radius: 12px;
+    font-size: 20px;
+}
+
+/* Flèches */
+.arrows {
+    position: fixed;
+    bottom: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+
+.arrow {
+    font-size: 30px;
+    background: white;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    cursor: pointer;
+    user-select: none;
+}
+</style>
 </head>
 
 <body>
-    <div class="container">
-        <h1>Bienvenue 👋</h1>
 
-        <!-- Noter le restaurant -->
-        <a class="button"
-           href="https://avenirsarlat.fr/le-bistrot/"
-           target="_blank">
-            ⭐ Noter le restaurant
-        </a>
+<div class="slider" id="slider">
 
-        <!-- Menu anglais -->
-        <a class="button"
-           href="menu-en.html"
-           target="_blank">
-            🇬🇧 Menu en anglais
-        </a>
-
-        <!-- Menu espagnol -->
-        <a class="button"
-           href="menu-es.html"
-           target="_blank">
-            🇪🇸 Menú en español
-        </a>
+    <!-- SLIDE 1 : NOTER -->
+    <div class="slide">
+        <div class="card">
+            <h1>⭐ Noter le restaurant</h1>
+            <a href="https://TON-LIEN-GOOGLE-AVIS" target="_blank">
+                Laisser un avis
+            </a>
+        </div>
     </div>
+
+    <!-- SLIDE 2 : MENU EN -->
+    <div class="slide">
+        <div class="card">
+            <h1>🇬🇧 Menu en anglais</h1>
+            <a href="menu-en.html" target="_blank">
+                Voir le menu
+            </a>
+        </div>
+    </div>
+
+    <!-- SLIDE 3 : MENU ES -->
+    <div class="slide">
+        <div class="card">
+            <h1>🇪🇸 Menú en español</h1>
+            <a href="menu-es.html" target="_blank">
+                Ver el menú
+            </a>
+        </div>
+    </div>
+
+</div>
+
+<!-- Flèches -->
+<div class="arrows">
+    <div class="arrow" onclick="prev()">⬅️</div>
+    <div class="arrow" onclick="next()">➡️</div>
+</div>
+
+<script>
+let index = 0;
+const slider = document.getElementById("slider");
+
+function updateSlider() {
+    slider.style.transform = `translateX(-${index * 100}%)`;
+}
+
+function next() {
+    if (index < 2) {
+        index++;
+        updateSlider();
+    }
+}
+
+function prev() {
+    if (index > 0) {
+        index--;
+        updateSlider();
+    }
+}
+</script>
+
 </body>
 </html>
