--- a/index.html
+++ b/index.html
@@ -1,152 +1,138 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Restaurant</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Restaurant</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
-    background: #ececec;
-    overflow: hidden;
-}
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
+            background: #ececec;
+            overflow: hidden;
+        }
 
-/* Conteneur du slider */
-.slider {
-    display: flex;
-    width: 300%;
-    height: 100%;
-    transition: transform 0.5s ease-in-out;
-}
+        .slider {
+            display: flex;
+            width: 300%;
+            height: 100%;
+            transition: transform 0.5s ease-in-out;
+        }
 
-/* Chaque écran */
-.slide {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        .slide {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-/* Carte centrale */
-.card {
-    background: white;
-    width: 85%;
-    height: 80%;
-    border-radius: 20px;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.25);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-}
+        .card {
+            background: white;
+            width: 85%;
+            height: 80%;
+            border-radius: 20px;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.25);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+        }
 
-/* Bouton principal */
-.card a {
-    text-decoration: none;
-    background: #2c7be5;
-    color: white;
-    padding: 20px 30px;
-    border-radius: 12px;
-    font-size: 20px;
-}
+        .card a {
+            text-decoration: none;
+            background: #2c7be5;
+            color: white;
+            padding: 20px 30px;
+            border-radius: 12px;
+            font-size: 20px;
+        }
 
-/* Flèches */
-.arrows {
-    position: fixed;
-    bottom: 30px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 30px;
-    box-sizing: border-box;
-}
+        .arrows {
+            position: fixed;
+            bottom: 30px;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 30px;
+            box-sizing: border-box;
+        }
 
-.arrow {
-    font-size: 30px;
-    background: white;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    cursor: pointer;
-    user-select: none;
-}
-</style>
+        .arrow {
+            font-size: 30px;
+            background: white;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+            cursor: pointer;
+            user-select: none;
+        }
+    </style>
 </head>
 
 <body>
 
 <div class="slider" id="slider">
-
-    <!-- SLIDE 1 : NOTER -->
     <div class="slide">
         <div class="card">
             <h1>⭐ Noter le restaurant</h1>
-            <a href="https://TON-LIEN-GOOGLE-AVIS" target="_blank">
-                Laisser un avis
-            </a>
+            <a href="https://TON-LIEN-GOOGLE-AVIS" target="_blank">Laisser un avis</a>
         </div>
     </div>
 
-    <!-- SLIDE 2 : MENU EN -->
     <div class="slide">
         <div class="card">
             <h1>🇬🇧 Menu en anglais</h1>
-            <a href="menu-en.html" target="_blank">
-                Voir le menu
-            </a>
+            <a href="menu-en.html" target="_blank">Voir le menu</a>
         </div>
     </div>
 
-    <!-- SLIDE 3 : MENU ES -->
     <div class="slide">
         <div class="card">
             <h1>🇪🇸 Menú en español</h1>
-            <a href="menu-es.html" target="_blank">
-                Ver el menú
-            </a>
+            <a href="menu-es.html" target="_blank">Ver el menú</a>
         </div>
     </div>
-
 </div>
 
-<!-- Flèches -->
 <div class="arrows">
     <div class="arrow" onclick="prev()">⬅️</div>
     <div class="arrow" onclick="next()">➡️</div>
 </div>
 
 <script>
-let index = 0;
-const slider = document.getElementById("slider");
+    let index = 0;
+    const totalSlides = 3;
+    const slider = document.getElementById("slider");
 
-function updateSlider() {
-    slider.style.transform = `translateX(-${index * 100}%)`;
-}
-
-function next() {
-    if (index < 2) {
-        index++;
-        updateSlider();
+    function updateSlider() {
+        if (index < 0) index = 0;
+        if (index >= totalSlides) index = totalSlides - 1;
+        slider.style.transform = `translateX(-${index * 100}%)`;
     }
-}
 
-function prev() {
-    if (index > 0) {
-        index--;
-        updateSlider();
+    function next() {
+        if (index < totalSlides - 1) {
+            index++;
+            updateSlider();
+        }
     }
-}
+
+    function prev() {
+        if (index > 0) {
+            index--;
+            updateSlider();
+        }
+    }
 </script>
 
 </body>
