--- a/index.html
+++ b/index.html
@@ -130,5 +130,18 @@
         }
     }
 
-    function
+    function prev() {
+        if (index > 0) {
+            index--;
+            updateSlider();
+        }
+    }
+
+    // Initialiser l'affichage
+    updateSlider();
+</script>
+
+</body>
+</html>
+
 
