--- a/index.html
+++ b/index.html
@@ -1,92 +1,90 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Restaurant</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta charset="UTF-8">
+<title>Restaurant</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background: #ececec;
-            font-family: Arial, sans-serif;
-            overflow: hidden;
-        }
+<style>
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: #ececec;
+    font-family: Arial, sans-serif;
+    overflow: hidden;
+}
 
-        .wrapper {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: #ececec;
-        }
+.wrapper {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
 
-        .slider {
-            display: flex;
-            height: 100%;
-            width: 300%;
-            transition: transform 0.5s ease;
-        }
+.slider {
+    display: flex;
+    height: 100%;
+    transition: transform 0.5s ease;
+}
 
-        .slide {
-            min-width: 100vw;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+.slide {
+    min-width: 100vw;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-        .card {
-            background: white;
-            width: 90%;
-            height: 90%;
-            border-radius: 20px;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.3);
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-        }
+.card {
+    background: white;
+    width: 85%;
+    height: 80%;
+    border-radius: 20px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
-        .card a {
-            text-decoration: none;
-            background: #2c7be5;
-            color: white;
-            padding: 15px 25px;
-            border-radius: 12px;
-            font-size: 18px;
-        }
+.card h1 {
+    margin-bottom: 30px;
+}
 
-        .arrows {
-            position: fixed;
-            bottom: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            padding: 0 20px;
-            box-sizing: border-box;
-        }
+.card a {
+    text-decoration: none;
+    background: #2c7be5;
+    color: white;
+    padding: 20px 30px;
+    border-radius: 12px;
+    font-size: 20px;
+}
 
-        .arrow {
-            width: 50px;
-            height: 50px;
-            background: white;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 28px;
-            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-            cursor: pointer;
-            user-select: none;
-        }
-    </style>
+.arrows {
+    position: fixed;
+    bottom: 25px;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+}
+
+.arrow {
+    width: 50px;
+    height: 50px;
+    background: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 28px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.25);
+    cursor: pointer;
+    user-select: none;
+}
+</style>
 </head>
 
 <body>
@@ -97,21 +95,27 @@
         <div class="slide">
             <div class="card">
                 <h1>⭐ Noter le restaurant</h1>
-                <a href="https://TON-LIEN-GOOGLE-AVIS" target="_blank">Laisser un avis</a>
+                <a href="https://TON-LIEN-GOOGLE-AVIS" target="_blank">
+                    Laisser un avis
+                </a>
             </div>
         </div>
 
         <div class="slide">
             <div class="card">
                 <h1>🇬🇧 Menu en anglais</h1>
-                <a href="menu-en.html" target="_blank">Voir le menu</a>
+                <a href="menu-en.html" target="_blank">
+                    Voir le menu
+                </a>
             </div>
         </div>
 
         <div class="slide">
             <div class="card">
                 <h1>🇪🇸 Menú en español</h1>
-                <a href="menu-es.html" target="_blank">Ver el menú</a>
+                <a href="menu-es.html" target="_blank">
+                    Ver el menú
+                </a>
             </div>
         </div>
 
@@ -120,4 +124,29 @@
 
 <div class="arrows">
     <div class="arrow" id="prev">⬅️</div>
-    <
+    <div class="arrow" id="next">➡️</div>
+</div>
+
+<script>
+let index = 0;
+const slider = document.getElementById("slider");
+const slides = document.querySelectorAll(".slide");
+const maxIndex = slides.length - 1;
+
+document.getElementById("next").onclick = () => {
+    if (index < maxIndex) {
+        index++;
+        slider.style.transform = `translateX(-${index * 100}vw)`;
+    }
+};
+
+document.getElementById("prev").onclick = () => {
+    if (index > 0) {
+        index--;
+        slider.style.transform = `translateX(-${index * 100}vw)`;
+    }
+};
+</script>
+
+</body>
+</html>
