--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Restaurant</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
 <style>
 html, body {
@@ -46,6 +46,9 @@ html, body {
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    /* DÉCALAGE VERS LE HAUT */
+    transform: translateY(-30px);
 }
 
 .card h1 {
