--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@ html, body {
 
         <div class="slide">
             <div class="card">
-                <h1>🇬🇧 Menu en anglais</h1>
+                <h1>🇬🇧 Menu en anglais
+                        English menu</h1>
                 <a href="menu-en.html" target="_blank">
                     Voir le menu
                 </a>
@@ -115,7 +116,8 @@ html, body {
 
         <div class="slide">
             <div class="card">
-                <h1>🇪🇸 Menú en español</h1>
+                <h1>🇪🇸 Menú en español
+                       Menú en español</h1>
                 <a href="menu-es.html" target="_blank">
                     Ver el menú
                 </a>
